--- a/web/src/app/admin/accounts/accounts-view-assignment/accounts-view-assignment.page.html
+++ b/web/src/app/admin/accounts/accounts-view-assignment/accounts-view-assignment.page.html
@@ -61,6 +61,16 @@
     <ion-row>
       <ion-col size="4">
         <ion-label>
+          <b>Student Message</b>
+        </ion-label>
+      </ion-col>
+      <ion-col size="8">
+        <ion-label>{{ assignment.message ? assignment.message : ' -- ' }}</ion-label>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="4">
+        <ion-label>
           <b>Grade</b>
         </ion-label>
       </ion-col>
