--- a/web/src/app/admin/accounts/accounts.page.html
+++ b/web/src/app/admin/accounts/accounts.page.html
@@ -1,12 +1,30 @@
 <ion-content>
   <ion-grid fixed class="p-25">
-    <ion-row class="m-b-15">
-      <ion-col>
-        <ion-button (click)="createUser()">
-          Add new account
-        </ion-button>
-      </ion-col>
-    </ion-row>
+    <ion-list>
+      <ion-row class="m-b-15" align-items-center>
+        <ion-col size="9">
+          <ion-button (click)="createUser()">
+            Add new account
+          </ion-button>
+        </ion-col>
+        <ion-col size="3">
+          <ion-item>
+            <ion-label position="floating">Filter by type</ion-label>
+            <ion-select 
+              interface="popover" 
+              placeholder="Select Account Type"
+              [value]="userType"
+              [(ngModel)]="userType"
+              (ionChange)="filterByType()">
+              <ion-select-option [value]="USER_TYPE_VALUES[u]" *ngFor="let u of USER_TYPE_KEYS">
+                {{ USER_TYPE_VALUES[u] === USER_TYPE_VALUES.FIELD_ADMIN ? 'RCA' : USER_TYPE_VALUES[u] }}
+              </ion-select-option>
+            </ion-select>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+    </ion-list>
+
     <ion-row class="border-bottom">
       <ion-col size="4">
         <b>Name</b>
@@ -21,30 +39,10 @@
         <b>Status</b>
       </ion-col>
     </ion-row>
-    <!-- <ion-row 
-      class="border-bottom log p-t-b-10" 
-      align-items-center *ngFor="let user of users"
-      (click)="viewUser(user)">
-      <ion-col size="4">
-        {{ user.firstName + ' ' + user.middleName + ' ' + user.lastName }}
-      </ion-col>
-      <ion-col size="4">
-        {{ user.email }}
-      </ion-col>
-      <ion-col size="3">
-        {{ user.userType === UserType.FIELD_ADMIN ? 'RCA' : user.userType }}
-      </ion-col>
-      <ion-col size="1" *ngIf="user.isActive">
-        Active
-      </ion-col>
-      <ion-col size="1" *ngIf="!user.isActive">
-        Inactive
-      </ion-col>
-    </ion-row> -->
-
+    
     <ion-row 
       class="border-bottom log p-t-b-10" 
-      align-items-center *ngFor="let user of users | paginate: { itemsPerPage: 20, currentPage: p }"
+      align-items-center *ngFor="let user of filteredUsers | paginate: { itemsPerPage: 20, currentPage: p }"
       (click)="viewUser(user)">
       <ion-col size="4">
         {{ user.firstName + ' ' + user.middleName + ' ' + user.lastName }}
