--- a/web/src/app/field-admin/grades-management/grades-management.page.html
+++ b/web/src/app/field-admin/grades-management/grades-management.page.html
@@ -1,5 +1,25 @@
 <ion-content>
   <ion-grid fixed class="p-25">
+    <ion-list>
+      <ion-row class="m-b-15" align-items-center>
+        <ion-col offset="8" size="4">
+          <ion-item>
+            <ion-label position="floating">Filter by schedule</ion-label>
+            <ion-select 
+              interface="action-sheet" 
+              placeholder="Select Schedule"
+              [value]="schedule"
+              [(ngModel)]="schedule"
+              (ionChange)="filterBySchedule()"
+              [disabled]="schedules.length === 0">
+              <ion-select-option [value]="sched" *ngFor="let sched of schedules">
+                {{ sched.startDate | date: 'MMM dd, yyyy' }} - {{ sched.endDate | date: 'MMM dd, yyyy' }}
+              </ion-select-option>
+            </ion-select>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+    </ion-list>
     <ion-row class="border-bottom">
       <ion-col size="2">
         <b>Course</b>
@@ -22,7 +42,7 @@
     </ion-row>
     <ion-row 
       class="border-bottom log p-t-b-10" 
-      align-items-center *ngFor="let assignment of assignments | paginate: { itemsPerPage: 20, currentPage: p }"
+      align-items-center *ngFor="let assignment of filteredAssignments | paginate: { itemsPerPage: 20, currentPage: p }"
       (click)="viewAssignment(assignment)">
       <ion-col size="2">
         {{ assignment.field.name }}
